@@ -1,3 +1,9 @@
+2010-02-17   D. V. Wiebe <getdata@ketiltrout.net>   svn:375
+	Merged in changes from the 0.6 branch, revision 373:
+
+	* src/ascii.c (_GD_AsciiSize): Don't trample on the file name.
+	* test/ascii_nframes.c: Update to test for same.
+
 2010-02-15   D. V. Wiebe <getdata@ketiltrout.net>   svn:362
 	* util/dirfile2ascii.c: Added Matthew Truch's ASCII conversion utility.
 
